# xshm

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md  build.ps1  build.rs  cbindgen.toml
.cargo/: config.toml
include/: xshm.h  xshm_client.h  xshm_server.h
src/: client.rs  constants.rs  error.rs  events.rs  ffi.rs  layout.rs  lib.rs  naming.rs  ring.rs  server.rs  shared.rs  win.rs
src/auto/: mod.rs
src/dispatch/: ffi.rs  mod.rs  protocol.rs
src/multi/: ffi.rs  mod.rs
src/ntapi/: funcs.rs  helpers.rs  mod.rs  types.rs
tests/: multi.rs  ordering.rs  stress.rs
