[package]
name = "xshm"
version = "0.3.0"
edition = "2021"
description = "High-performance cross-process shared memory IPC using direct NT API calls"
authors = ["Platon"]

[lib]
name = "xshm"
crate-type = ["rlib", "staticlib"]

[build-dependencies]
cbindgen = "0.29"

[dependencies]
thiserror = "1.0"

# Без внешних зависимостей для NT API!
# Используем прямую линковку с ntdll.dll через #[link(name = "ntdll")]

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
